@@ -28,6 +28,9 @@
 #include "header.h"
 #include "url.h"
 
+#include "gethead.h"
+#include "options.h"
+
 #include "strl.h"
 
 void server_close(struct server_struct *inst)
@@ -122,92 +125,14 @@ int server_readln(struct server_struct *inst, char *str, const unsigned int strs
 	return strpos-1;	
 }
 
-void server_dirlist(struct server_struct *inst,char *dirname,int dirlen)
-{
-	DIR *dir;
-	struct dirent *ent;
-	int retval,bufpos;
-	char Buffer[SEND_BUFFER_SIZE];
-	char FBuffer[FILENAME_SIZE];
-	char *cptr;
-	struct stat statbuf;
-
-	if (dirlen>FILENAME_SIZE) dirlen=FILENAME_SIZE;
-
-	retval=strnlen(dirname,dirlen);
-	if (dirname[retval-1] != '/')
-	{
-		dirname[retval] = '/';
-		dirname[retval+1] = 0;
-	}
-	if ((dir = opendir(dirname)) == NULL)
-	{
-		retval=strnlen(dirname,dirlen);
-		if (dirname[retval-1] == '/') dirname[retval-1] = 0;
-
-		setHeader_respval(inst,404);  // Not Found
-		printHeader(inst,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
-		return;
-	}
-	else
-	{
-		setHeader_filename(inst,".html");
-		setHeader_respval(inst,201);  // Created
-		bufpos=printHeader(inst,Buffer,SEND_BUFFER_SIZE);
-
-		bufpos+=snprintf(Buffer+bufpos,SEND_BUFFER_SIZE-bufpos,"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2//EN\">\n<HTML><HEAD><TITLE>Index of %s</TITLE></HEAD><BODY><H1>Index of %s</H1><PRE><HR>\n",dirname+1,dirname+1);
-		send(inst->sock,Buffer,bufpos,0);
-
-		while ((ent = readdir(dir)) != NULL)
-		if (strcmp(ent->d_name,".")!=0)
-		if ((strcmp(dirname,"./")!=0) || (ent->d_name[0]!='.'))
-		{
-			strlcpy(FBuffer,dirname,FILENAME_SIZE);
-			if (strcmp(ent->d_name,"..")!=0)
-			{
-				strlcat(FBuffer,ent->d_name,FILENAME_SIZE);
-				stat(FBuffer, &statbuf);
-
-				if (statbuf.st_mode & S_IFDIR)
-				{
-					retval=strnlen(FBuffer,FILENAME_SIZE);
-					if (FBuffer[retval-1] != '/')
-					{
-						FBuffer[retval] = '/';
-						FBuffer[retval+1] = 0;
-					}
-				}
-			}
-			else
-			{
-				retval=strnlen(dirname,FILENAME_SIZE);
-				if (FBuffer[retval-1] == '/') FBuffer[retval-1] = 0;
-				if ((cptr=strrchr(FBuffer,'/')) != NULL) cptr[1] = 0;
-				else strlcpy(FBuffer,"/",FILENAME_SIZE);
-
-			}
-
-			bufpos=snprintf(Buffer,SEND_BUFFER_SIZE,"<A href=\"%s\">%s</A>\n",FBuffer+1,ent->d_name);
-			send(inst->sock,Buffer,bufpos,0);
-		}
-
-		closedir(dir);
-
-		bufpos=snprintf(Buffer,SEND_BUFFER_SIZE,"</PRE><HR><ADDRESS>%s Server Port %d</ADDRESS></BODY></HTML>",VERSION,PORT);
-		send(inst->sock,Buffer,bufpos,0);
-	}
-}
-
 DWORD WINAPI server(struct server_struct *inst)
 {
 	char Buffer[SEND_BUFFER_SIZE];
 	char filename[FILENAME_SIZE];
 	char GHBuffer[SERVER_BUFFER_SIZE];
 	int retval;
-	FILE *in;
+	int headeronly;
 	char *tstr;
-        struct stat statbuf;
-        struct tm *loctime;
 
 	// Initialize structure
 	inst->buffer_pos=0;
@@ -217,12 +142,26 @@ DWORD WINAPI server(struct server_struct *inst)
 	filename[1]=0;
 	clearHeader(inst);
 
-//CHANGE replaced the parsing
+	headeronly=1;	// Disable data by default
+
 	// Parse header
 	retval = server_readln(inst,GHBuffer,SERVER_BUFFER_SIZE);
 	// check for GET requests
-	if ( retval > 4 && 0 == strncmp(GHBuffer, "GET ", 4))
+	if ( retval >= 4 && 0 == strncmp(GHBuffer, "GET ", 4))
+	{
 		urldecode(GHBuffer+4, filename+1, FILENAME_SIZE-1);
+		headeronly=0;
+	} 
+	else if ( retval >= 5 && 0 == strncmp(GHBuffer, "HEAD ", 5))
+	{
+		urldecode(GHBuffer+5, filename+1, FILENAME_SIZE-1);
+		//headeronly=1;
+	} 
+	else if ( retval >= 8 && 0 == strncmp(GHBuffer, "OPTIONS ", 8)) 
+	{
+		OPTIONS(inst);
+		goto serverquit;
+	}
 	else
         {
                 // Unknown request type, also print request to logfile
@@ -230,7 +169,7 @@ DWORD WINAPI server(struct server_struct *inst)
                 inst->logbuffer[SERVER_BUFFER_SIZE-1] = 0; // snprintf does not null-delimit when full
                 inst->MIMEoverride = GHBuffer; // Override MIME type with unknown request type
                 setHeader_respval(inst,501); // Not Implemented
-                printHeader(inst,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
+                printHeader(inst,headeronly,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
 
                 goto serverquit;
         }
@@ -239,7 +178,7 @@ DWORD WINAPI server(struct server_struct *inst)
 		snprintf(inst->logbuffer,SERVER_BUFFER_SIZE,"\"%s:%d\"",inet_ntoa(inst->sin_addr),htons(inst->sin_port));
                 inst->logbuffer[SERVER_BUFFER_SIZE-1] = 0; // snprintf does not null-delimit when full
 		setHeader_respval(inst,400);  // Bad Request
-		printHeader(inst,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
+		printHeader(inst,headeronly,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
 		
 		goto serverquit;
 	}
@@ -260,79 +199,12 @@ DWORD WINAPI server(struct server_struct *inst)
 	{
 		strlcat(inst->logbuffer," ;",SERVER_BUFFER_SIZE);
 		setHeader_respval(inst,403);  // Forbidden
-		printHeader(inst,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
+		printHeader(inst,headeronly,Buffer,SEND_BUFFER_SIZE); // No need to read return value as it will flush the buffer
 		
 		goto serverquit;
 	}
-	if ((in = fopen(filename, "rb")) == NULL)
-	{
-		retval=strlcpy(GHBuffer,filename,SERVER_BUFFER_SIZE);
-		if (GHBuffer[retval-1] == '/') {
-			strlcat(GHBuffer,"index.html",SERVER_BUFFER_SIZE);
-			in = fopen(GHBuffer, "rb");
-			if (in != NULL) 
-			{
-				strlcat(inst->logbuffer,"[index.html]",SERVER_BUFFER_SIZE);
-				strlcat(filename,"index.html",FILENAME_SIZE);
-			}
-		}
-	}
-	
-	strlcat(inst->logbuffer," ;",SERVER_BUFFER_SIZE);
-	if (in == NULL)
-	{
-		server_dirlist(inst,filename,FILENAME_SIZE);
-	}
-	else 
-	{
-		int ret,blen;
-		filename[FILENAME_SIZE-1]=0;
-		setHeader_filename(inst,filename);
-		setHeader_respval(inst,200);  // OK
-		blen=0;
-		if (!fseek(in,0,SEEK_END))
-		{
-			// Supports seek
-			blen=snprintf(GHBuffer,SERVER_BUFFER_SIZE,"Content-Length: %ld\r\n",ftell(in));
-			fseek(in,0,SEEK_SET);
-		}
-                if (stat(filename, &statbuf) == 0) {
-                        // Supports filestats
-                        loctime = gmtime (&statbuf.st_mtime);
-                        strftime(GHBuffer+blen,SERVER_BUFFER_SIZE-blen,"Last-Modified: %a, %d %b %Y %I:%M:%S GMT\r\n",loctime);
-                }
 
-		GHBuffer[SERVER_BUFFER_SIZE-1] = 0; // strnprintf does not null-delimit when full
-		setHeader_generic(inst,GHBuffer);
-		blen=printHeader(inst,Buffer,SEND_BUFFER_SIZE);
-
-		while ((retval=fread(Buffer+blen, 1,SEND_BUFFER_SIZE-blen, in)) > 0) {
-			retval+=blen;
-			ret=0;
-			blen=0;
-//			printf("1: bpos=%d\tret=%d\tretval=%d\n",blen,ret,retval);
-
-			while ((ret < retval) && (retval > 0)) 
-			{
-				ret=send(inst->sock,Buffer+blen,retval,0);
-//				printf("2: bpos=%d\tret=%d\tretval=%d\n",blen,ret,retval);
-
-				if (ret == 0) 
-				{
-//					printf("transmission error\n");
-					fclose(in);
-					goto serverquit;
-				}
-				blen+=ret;
-				retval-=ret;
-				ret=0;
-//				printf("3: bpos=%d\tret=%d\tretval=%d\n",blen,ret,retval);
-			}
-			blen=0;
-		}
-//		printf("While quit\nbpos=%d\tret=%d\tretval=%d\n\n",blen,ret,retval);
-		fclose(in);
-	}
+	GETHEAD(inst,headeronly,filename,FILENAME_SIZE);
 
 serverquit:
 
